# astgrep

./: .dockerignore  .gitignore  ALIGNMENT_MATRIX.md  ALIGNMENT_REPORT_INDEX.md  ALIGNMENT_UPDATE_AFTER_P0.md  ALIGNMENT_VERIFICATION_REPORT.md  CROSS_COMPILE_QUICK_REFERENCE.md  Cargo.toml  Cross.toml  Dockerfile.linux-static  Dockerfile.uos  HOW_TO_RUN_CR_WEB.md  PLAYGROUND_FINAL_SUMMARY.md  PLAYGROUND_REDESIGN_COMPLETE.md  PLAYGROUND_REDESIGN_SUMMARY.md  PLAYGROUND_TESTING_GUIDE.md  PLAYGROUND_UI_OPTIMIZATION.md  QUICK_START_P1_FIXES.md  README.md  README_cn.md  XML_SUPPORT.md  astgrep-web.toml  astgrep.toml  build_all.sh  build_linux_static.sh  build_with_docker.sh  cr-semservice.toml  cr-web.toml  test_api.sh  test_code.js  test_gui_chinese.sh
.cargo/: config.toml
cr-rules/: CS-EH-08.java  CS-EH-08.yaml  CS-EH-09.java  CS-EH-09.yaml  CS-MT-01.java  CS-MT-01.yaml  CS-OT-04.java  CS-OT-04.yaml  CS-PF-01.java  CS-PF-01.yaml  CS-RD-09.java  CS-RD-09.yaml  CS-SC-17.java  CS-SC-17.yaml  CS-SC-18.java  CS-SC-18.yaml  CheckList.json  DB-SQ-02.java  DB-SQ-02.yaml  DB-SQ-08.java  DB-SQ-08.yaml  DB-SQ-09.java  DB-SQ-09.yaml  DB-SQ-10.java  DB-SQ-10.yaml
crates/astgrep-cli/: Cargo.toml
crates/astgrep-cli/src/: lib.rs  main.rs  profiler.rs  tree_sitter_analyzer.rs  vscode_integration.rs
crates/astgrep-cli/src/commands/: analyze.rs  analyze_enhanced.rs  info.rs  init.rs  languages.rs  list.rs  update.rs  validate.rs  validate_enhanced.rs  version.rs
crates/astgrep-core/: Cargo.toml
crates/astgrep-core/benches/: performance.rs
crates/astgrep-core/src/: constants.rs  error.rs  error_handling.rs  lib.rs  optimization.rs  patterns.rs  traits.rs  types.rs
crates/astgrep-dataflow/: Cargo.toml
crates/astgrep-dataflow/src/: advanced_taint.rs  call_graph.rs  constant_analysis.rs  constant_propagation.rs  enhanced_taint.rs  flows.rs  graph.rs  interprocedural.rs  lib.rs  sanitizers.rs  sinks.rs  sources.rs  symbol_table.rs  taint.rs
crates/astgrep-gui/: Cargo.toml  README.md
crates/astgrep-gui/src/: app.rs  main.rs
crates/astgrep-gui/src/components/: code_editor.rs  menu_bar.rs  mod.rs  results_panel.rs  rule_editor.rs  settings_panel.rs  status_bar.rs
crates/astgrep-gui/src/utils/: clipboard.rs  mod.rs  syntax_highlighting.rs
crates/astgrep-matcher/: Cargo.toml
crates/astgrep-matcher/src/: advanced_matcher.rs  conditions.rs  lib.rs  matcher.rs  metavar.rs  parser.rs  precise_matcher.rs
crates/astgrep-matcher/tests/: basic_tests.rs
crates/astgrep-parser/: Cargo.toml
crates/astgrep-parser/src/: adapters.rs  base_adapter.rs  bash.rs  c.rs  c_simple.rs  csharp.rs  java.rs  javascript.rs  javascript_optimizer.rs  kotlin.rs  lib.rs  php.rs  php_optimizer.rs  python.rs  registry.rs  ruby.rs  sql.rs  swift.rs  tree_sitter_parser.rs  xml.rs
crates/astgrep-rules/: Cargo.toml
crates/astgrep-rules/src/: engine.rs  executor.rs  integration.rs  lib.rs  parser.rs  types.rs  validator.rs
crates/astgrep-rules/tests/: integration.rs
crates/astgrep-web/: Cargo.toml
crates/astgrep-web/rules/: c-builtin.yaml  csharp-builtin.yaml  java-builtin.yaml  php-builtin.yaml
crates/astgrep-web/src/: config.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs
crates/astgrep-web/src/handlers/: analyze.rs  auth.rs  docs.rs  health.rs  jobs.rs  metrics.rs  mod.rs  playground.rs  root.rs  rules.rs
crates/cr-cli/: Cargo.toml
crates/cr-cli/src/: lib.rs  main.rs  profiler.rs  tree_sitter_analyzer.rs  vscode_integration.rs
crates/cr-cli/src/commands/: analyze.rs  analyze_enhanced.rs  info.rs  init.rs  languages.rs  list.rs  mod.rs  update.rs  validate_enhanced.rs  version.rs
crates/cr-core/: Cargo.toml
crates/cr-core/benches/: performance.rs
crates/cr-core/src/: constants.rs  error.rs  error_handling.rs  lib.rs  optimization.rs  traits.rs  types.rs
crates/cr-gui/: Cargo.toml
crates/cr-gui/src/: app.rs  main.rs
crates/cr-gui/src/components/: menu_bar.rs  mod.rs  results_panel.rs  rule_editor.rs  settings_panel.rs  status_bar.rs
crates/cr-gui/src/utils/: file_operations.rs
crates/cr-parser/: Cargo.toml
crates/cr-parser/src/: adapters.rs  base_adapter.rs  bash.rs  c.rs  c_simple.rs  csharp.rs  java.rs  javascript.rs  javascript_optimizer.rs  kotlin.rs  lib.rs  php.rs  php_optimizer.rs  python.rs  registry.rs  ruby.rs  sql.rs  swift.rs  tree_sitter_parser.rs
crates/cr-rules/: Cargo.toml
crates/cr-rules/src/: engine.rs  executor.rs  integration.rs  lib.rs  marketplace.rs  parser.rs  types.rs  validator.rs
crates/cr-rules/tests/: integration.rs
crates/cr-web/: Cargo.toml  README.md
crates/cr-web/rules/: bash-builtin.yaml  javascript-builtin.yaml  python-builtin.yaml  sql-builtin.yaml
crates/cr-web/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  storage.rs
crates/cr-web/src/handlers/: analyze.rs  common.rs  docs.rs  health.rs  jobs.rs  metrics.rs  mod.rs  playground.rs  root.rs  version.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  mock_ast.rs  mock_data.rs  mock_parser.rs
docs/: API-Guide.md  ASTGREP_WEB_HELP_OUTPUT.md  ASTGREP_WEB_IMPLEMENTATION_REPORT.md  ASTGREP_WEB_QUICK_REFERENCE.md  COMPREHENSIVE_VALIDATION_FINAL_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  CROSS_COMPILE_GUIDE.md  FINAL_COMPLETE_VALIDATION_REPORT.md  GUI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  JAVA_COMPARISON_REPORT.md  JAVA_RULES_VALIDATION_ANALYSIS.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  RULE_VALIDATION_METHODOLOGY.md  SEMGREP_COMPATIBILITY_ASSESSMENT.md  SEMGREP_COMPATIBILITY_FINAL_REPORT.md  SEMGREP_COMPATIBILITY_INDEX.md  SEMGREP_COMPATIBILITY_REPORT.md  SEMGREP_EXECUTIVE_SUMMARY.md  SGREP_SUPPORT_FINAL_REPORT.md  TESTING_FRAMEWORK_SUMMARY.md  User-Guide.md  VALIDATION_SCRIPT_FIXES.md  VALIDATION_SUITE_SUMMARY.md  VALIDATION_SUMMARY.md  astgrep-Guide.md  design-v1.1.md  design.md  enhance-rules.md  enhance-rules2.md  impl-phases.md  optimization_report.md
examples/: astgrep-web-config.toml  cs-eh-08-system-out-logging-semgrep.yaml  (+8 more)
(+323 files in other folders)
