[package]
name = "astgrep"
version = "0.1.0"
edition = "2021"
authors = ["Chen Jianjun <chenjj.yz@gmail.com>"]
description = "A multi-language static code analysis tool for security vulnerabilities and code quality"
license = "MIT"
repository = "https://github.com/c2j/astgrep"
keywords = ["static-analysis", "security", "code-quality", "ast", "vulnerability"]
categories = ["development-tools", "command-line-utilities"]

[workspace]
members = [
    "crates/astgrep-ast",
    "crates/astgrep-rules",
    "crates/astgrep-parser",
    "crates/astgrep-matcher",
    "crates/astgrep-dataflow",
    "crates/astgrep-cli",
    "crates/astgrep-core",
    "crates/astgrep-web",
    "crates/astgrep-gui",
    "crates/test-utils",
]

[dependencies]
regex = "1.11.1"
# Internal crates
astgrep-core = { path = "crates/astgrep-core" }
astgrep-ast = { path = "crates/astgrep-ast" }
astgrep-matcher = { path = "crates/astgrep-matcher" }
astgrep-parser = { path = "crates/astgrep-parser" }
astgrep-dataflow = { path = "crates/astgrep-dataflow" }
astgrep-rules = { path = "crates/astgrep-rules" }
astgrep-cli = { path = "crates/astgrep-cli" }

# External dependencies
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true



[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenSSL with vendored feature for static linking
openssl = { version = "0.10", features = ["vendored"] }

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
dashmap = "5.5"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"


# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Parsing and regex
regex = "1.10"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-bash = "0.25"
# Use a simpler approach for SQL - we'll implement basic SQL parsing without tree-sitter for now
# tree-sitter-sql = { package = "devgen-tree-sitter-sql", version = "0.21" }
tree-sitter-sequel = "0.3.11"


# Performance and caching
lru = "0.12"
once_cell = "1.19"

# GUI dependencies
eframe = { version = "0.24", features = ["default"] }
egui = "0.24"
egui_extras = { version = "0.24", features = ["default"] }
rfd = "0.12"
syntect = "5.1"
webbrowser = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sys-info = "0.9"

# Testing

# Main dependencies are already defined above

[[bin]]
name = "astgrep"
path = "src/main.rs"

[dev-dependencies]
criterion.workspace = true
tempfile = "3.8"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1
