[package]
name = "astgrep-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for astgrep static code analysis"

[[bin]]
name = "astgrep-cli"
path = "src/main.rs"

[dependencies]
astgrep-core = { path = "../astgrep-core" }
astgrep-ast = { path = "../astgrep-ast" }
astgrep-dataflow = { path = "../astgrep-dataflow" }
astgrep-parser = { path = "../astgrep-parser" }
astgrep-rules = { path = "../astgrep-rules" }
astgrep-matcher = { path = "../astgrep-matcher" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
regex = "1.0"

[dev-dependencies]
tempfile = "3.8"
