[package]
name = "astgrep-dataflow"
version = "0.1.0"
edition = "2021"
description = "Data flow and taint analysis for astgrep"

[dependencies]
astgrep-core = { path = "../astgrep-core" }
astgrep-ast = { path = "../astgrep-ast" }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.8"
