[package]
name = "astgrep-matcher"
version = "0.1.0"
edition = "2021"
description = "Pattern matching engine for astgrep"

[dependencies]
astgrep-core = { path = "../astgrep-core" }
astgrep-ast = { path = "../astgrep-ast" }
regex.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3.8"
