[package]
name = "astgrep-parser"
version = "0.1.0"
edition = "2021"
description = "Language parsers and adapters for astgrep"

[dependencies]
astgrep-core = { path = "../astgrep-core" }
astgrep-ast = { path = "../astgrep-ast" }
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-bash.workspace = true
# tree-sitter-sql.workspace = true
regex = "1.0"

[dev-dependencies]
tempfile = "3.8"
