[package]
name = "cr-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for CR-SemService static code analysis"

[[bin]]
name = "cr-cli"
path = "src/main.rs"

[dependencies]
cr-core = { path = "../cr-core" }
cr-ast = { path = "../cr-ast" }
cr-dataflow = { path = "../cr-dataflow" }
cr-parser = { path = "../cr-parser" }
cr-rules = { path = "../cr-rules" }
cr-matcher = { path = "../cr-matcher" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
regex = "1.0"

[dev-dependencies]
tempfile = "3.8"
