[package]
name = "cr-rules"
version = "0.1.0"
edition = "2021"
description = "Rule parsing and execution engine for CR-SemService"

[dependencies]
cr-core = { path = "../cr-core" }
cr-ast = { path = "../cr-ast" }
cr-matcher = { path = "../cr-matcher" }
cr-dataflow = { path = "../cr-dataflow" }
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3.8"
