[package]
name = "cr-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cr-web"
path = "src/main.rs"
description = "Web service interface for CR-SemService"
authors = ["CR-SemService Team"]

[dependencies]
# Core dependencies
cr-core = { path = "../cr-core" }
cr-cli = { path = "../cr-cli" }
cr-rules = { path = "../cr-rules" }
cr-parser = { path = "../cr-parser" }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
lazy_static = "1.4"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
mime = "0.3"
clap = { version = "4.0", features = ["derive"] }

# File handling
tempfile = "3.0"
zip = "0.6"

# Authentication (optional)
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Database (optional for job storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[features]
default = []
database = ["sqlx"]
auth = []
metrics = []

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum-test = "15.0"
