[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities and mock implementations for CR-SemService"

[dependencies]
# Core dependencies
cr-core = { path = "../cr-core" }
cr-ast = { path = "../cr-ast" }

# External dependencies
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

[lib]
name = "test_utils"
path = "src/lib.rs"
