[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities and mock implementations for astgrep"

[dependencies]
# Core dependencies
astgrep-core = { path = "../astgrep-core" }
astgrep-ast = { path = "../astgrep-ast" }

# External dependencies
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

[lib]
name = "test_utils"
path = "src/lib.rs"
